technote explaining n+1 solutions in a federated graph

--- a/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
+++ b/src/content/technotes/TN0018-aggregating-across-subgraphs.mdx
@@ -160,7 +160,7 @@ QueryPlan {
     },
     Parallel {
       Flatten(path: "search.@") {
-        Fetch(service: "one") {
+        Fetch(service: "books") {
           {
             ... on Book {
               __typename
@@ -177,7 +177,7 @@ QueryPlan {
         },
       },
       Flatten(path: "search.@") {
-        Fetch(service: "two") {
+        Fetch(service: "movies") {
           {
             ... on Movie {
               __typename
