--- a/src/content/technotes/TN0017-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0017-mocked-gateway-for-client-development.mdx
@@ -1,28 +1,26 @@
 ---
-title: "Using Apollo Gateway mocks to increase development velocity"
+title: "Mocking graph functionality to unblock client development"
 id: TN0017
 tags: [gateway, best practices, schema design, federation]
 ---
 
-## Problem statement
 
-As you begin to grow your graph, you may soon realize that your client teams are often waiting on subgraph owners to make agreed upon changes to the schema. This is especially common in earlier stages of your graph journey, where your graph has an agreed-upon structure, but has not been implemented yet from your subgraph team(s). Mocking your graph as you build both your clients and subgraphs can help enable teams to work in tandem and removes dependencies on one another.
+As your organization builds out its supergraph, you might discover that your client teams are often waiting on subgraph owners to make agreed-upon changes to their schemas. During this time, you can **mock** parts of your supergraph as you develop both your clients and subgraphs, enabling teams to work in parallel without blocking each other.
 
-Being able to work in parallel helps increase your development speed, and Apollo has a few suggested ways to enable parallel development during your graph evolution.
 
-## Plan your schema
+## First, agree on your schema
 
-Effectively using mocks requires that your schema has been determined by both client and backend teams as part of a larger [governance strategy](/enterprise-guide/graph-administration#governance) and approval process. Regardless of option, having agreement from both client and backend teams on the schema additions/removals/changes can help make your schema more useful and expressive.
+To mock parts of your supergraph effectively, both client and backend teams need to agree on the structure of those parts as part of a larger [governance strategy](/enterprise-guide/graph-administration#governance) and approval process. Alignment between these teams on schema additions/removals/changes can help make your schema more useful and expressive.
 
-In general, we recommended defining your schema ahead of time regardless of whether you implement this strategy or not, as it allows for teams to create an expressive, agreed-upon schema that empowers both backend and client teams to have input in the result.
+> We recommended that your backend and client teams align on your schema's structure ahead of time, even if you _don't_ use schema mocking. Doing so enables you to create an expressive schema that accelerates _all_ teams.
 
-### New Schema
+### Creating a new schema
 
-If starting on a new schema, it is important to start with fundamentals and best-practices, such as those listed on [Odyssey](https://www.apollographql.com/tutorials), [Principled GraphQL](https://principledgraphql.com/), and [Enterprise Guide](/enterprise-guide/introduction) and design the schema afterwards.
+If you're creating an entirely new graph and corresponding schema, it's important first to familiarize yourself with schema best practices, such as those described in [Apollo Odyssey](https://www.apollographql.com/tutorials), [Principled GraphQL](https://principledgraphql.com/), and the [Enterprise Guide](/enterprise-guide/introduction).
 
-For new schemas, we'd recommend using [this sample by GitHub user setchy](https://github.com/setchy/apollo-server-4-mocked-federation) to mock your new schema in it's entirety. This will enable your client teams to have a local (or hosted) instance of the schema to create client requests to and begin mocking UI with the mocked data.
+For new schemas, we recommend using [this sample by GitHub user setchy](https://github.com/setchy/apollo-server-4-mocked-federation) to mock your new schema in its entirety. This provides your client teams with a local (or hosted) instance of the schema to query against and begin mocking UI components with the mocked data.
 
-You'll need to [publish your schema to Apollo Studio](/graphos/schema/cli-registration) for use with this sample. For reasons [why to publish to Apollo Studio, see the below section](#why-use-apollo-studio-for-a-mocked-server).
+To use this sample, you need to [publish your schema to Apollo GraphOS](/graphos/schema/cli-registration). For details on the benefits of publishing to GraphOS, [see below](#why-use-graphos-for-a-mocked-server).
 
 To get started with the sample, run the following:
 
@@ -33,25 +31,25 @@ npm install
 cp .env.template .env
 ```
 
-Afterwards, edit the `.env` file with the appropriate values from Apollo Studio, and then run the following to start the server:
+Then, edit the `.env` file with the appropriate values from Apollo Studio and run the following to start the server:
 
 ```bash
 npm run dev
 ```
 
-The sample leverages `@graphql-tools/mock` to power the mocks, and can be extended following the [package's documentation page](https://www.the-guild.dev/graphql/tools/docs/mocking).
+The sample uses the `@graphql-tools/mock` package to power the mocks. You can customize the sample's behavior by following the instructions in the [package's documentation page](https://www.the-guild.dev/graphql/tools/docs/mocking).
 
 This gateway can then be used either locally (such as for local client development) or as a hosted gateway internally to be used by client developers.
 
 The data is mocked, however it doesn't require any work from server teams to support and will match the schema as it exists within Apollo Studio. As we're using Apollo Studio for the schema, schema changes will automatically be pulled ensuring client developers are working on the latest version.
 
-### Schema Changes
+### Modifying an existing schema
 
-Making changes to your schema operate in much the same way as building your first schema, especially in a planning capacity. As new features are inevitably made, it's important to think about how quickly your teams need to ship, especially for features that require intensive backend work (e.g. machine learning, new services, etc).
+The process for making changes to an existing schema is similar to that for creating a new one, especially in terms of planning. As you add new features, it's important reach a design consensus early, especially for features that require extensive backend work (e.g., machine learning).
 
-To mock proposed changes (such as adding a new type/field), we'd recommend using [this sample created by Apollo's Solutions Architecture team](https://github.com/apollosolutions/apollo-faker-demo), as it requires a pre-existing GraphQL API to be running. This example works by allowing for a "patched"/modified version of your subgraph to run locally with mocked data, while leveraging the remote API for all other data.
+To mock proposed changes (such as adding a new type/field), we recommend using [this sample created by Apollo's Solutions Architecture team](https://github.com/apollosolutions/apollo-faker-demo). This sample requires a preexisting GraphQL API to be running. It works by allowing for a "patched" or modified version of your subgraph to run locally with mocked data, while using the remote API for all other data.
 
-You'll need to [publish your schema to Apollo Studio](/graphos/schema/cli-registration) for use with this sample. For reasons [why to publish to Apollo Studio, see the below section](#why-use-apollo-studio-for-a-mocked-server).
+You'll need to [publish your schema to GraphOS](/graphos/schema/cli-registration) to use this sample. For details on the benefits of publishing to GraphOS, [see below](#why-use-graphos-for-a-mocked-server).
 
 To get started, run:
 
@@ -63,14 +61,14 @@ touch proposed.graphql
 npx github:@apollosolutions/apollo-faker-demo --graphref <yourgraph>@<variant> --remote https://yourapi.com/graphql
 ```
 
-And then modify the `proposed.graphql` file with the proposed changes. There are configuration options available leveraging the `@graphql-tools/mock` package, and can be modified as denoted in [the sample's README file, under step 5](https://github.com/apollosolutions/apollo-faker-demo#usage).
+Then, modify the `proposed.graphql` file with the proposed changes. There are configuration options available via the `@graphql-tools/mock` package, and you can set these options as documented in [the sample's README file, under step 5](https://github.com/apollosolutions/apollo-faker-demo#usage).
 
-## Why use Apollo Studio for a mocked server?
+## Why use GraphOS for a mocked server?
 
-Now that you have either a new schema or changes, it's important to upload it into [Apollo Studio](https://studio.apollographql.com) for three reasons:
+Now that you have either a new schema or changes to an existing one, it's important to publish that schema to Apollo GraphOS for the following reasons:
 
-1. It allows for a centralized view of the schema, along with a [mocked view of the schema](/graphos/explorer/additional-features/#mocked-responses).
-2. It allows for the samples referenced below to automatically update on changes, allowing for a deployed version of the samples to be referenced by all developers.
-3. For client teams using code generation tools, especially those in Apollo's clients, it's possible to use Studio as a source of the schema allowing for easier development.
+- Apollo Studio provides a centralized view of your schema, along with a [mocked view of the schema](/graphos/explorer/additional-features/#mocked-responses).
+- By publishing to GraphOS, the samples referenced above can automatically update on changes, allowing for a deployed version of the samples to be referenced by all developers.
+- For client teams using code generation tools (especially those in Apollo's client libraries) it's possible to use GraphOS as a source of the schema, allowing for more straightforward development.
 
 We recommend using a variant of your new/existing production graph ID. If considering mocking for schema changes, this also ensures proposed changes aren't breaking using [schema checks](/graphos/schema-checks) against production traffic.
