Improve visibility of tech notes docset

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -59,6 +59,13 @@ Apollo is a platform for building a [**supergraph**](./intro/platform/), a unifi
     description="Manage your graphs and schemas from the command line."
     path="/rover"
   />
+  <Docset
+    icon={DOCSET_ICONS.technotes}
+    title="Tech Notes"
+    description="Read in-depth articles on specialized Apollo topics."
+    path="/technotes"
+    cta="Browse tech notes"
+  />
 </DocsetGrid>
 
 ### Apollo Client
