--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -2,7 +2,9 @@
 title: Apollo Tech Notes
 ---
 
-This documentation set provides technical articles on specialized topics for Apollo tools and libraries. It is currently under development.
+This documentation set provides technical articles on specialized topics for Apollo tools and libraries.
+
+Select a tag to view a list of articles on the corresponding topic.
 
 import {RecentNotes, TagList} from '../../components/TechNotes';
 
